fix(homework_4):fix mobile version

--- a/frontend/homework/homework_4/style.css
+++ b/frontend/homework/homework_4/style.css
@@ -181,4 +181,12 @@ body {
         width: 100%;
         margin: auto
     }
+
+    .adressbook-box-aname__title-a {
+        top: 141px;
+    }
+        
+    .adressbook-box-bname__title-b {
+        top: 141px;
+    }
 }
